<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Polito Mail Android</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wait">Please Wait...</string>
    <string name="interrupted">Interrupted!</string>
    <string name="menu_login_create">Create User</string>
    <string name="menu_login_login">Log-In</string>
    <string name="menu_login_delete">Delete User</string>
    <string name="menu_login_clear">Clear Fields</string>
    <string name="menu_login_edit">Edit User</string>
    <string name="menu_login_exit">Exit</string>
    <string name="menu_accounts_create">Create Account</string>
    <string name="menu_accounts_access">Access Account</string>
    <string name="menu_accounts_delete">Delete Account</string>
    <string name="menu_accounts_edit">Edit Account</string>
    <string name="menu_accounts_logout">Log-Out</string>
    <string name="menu_account_confirm">Confirm</string>
    <string name="menu_account_clear">Clear Fields</string>
    <string name="menu_account_cancel">Cancel</string>
    <string name="menu_user_confirm">Confirm</string>
    <string name="menu_user_clear">Clear Fields</string>
    <string name="menu_user_cancel">Cancel</string>
    <string name="menu_mail_start">Retrieve Mail</string>
    <string name="menu_mail_cancel">Cancel Mail Retrieving</string>
    <string name="menu_mail_sslov_on">SSL Override ON</string>
    <string name="menu_mail_sslov_off">SSL Override OFF</string>
    <string name="menu_mails_start">Retrieve Mail(s)</string>
    <string name="menu_mails_cancel">Cancel Mail Retrieving</string>
    <string name="menu_mails_view">Show Selected Mail</string>
    <string name="menu_mails_sslov_on">SSL Override ON</string>
    <string name="menu_mails_sslov_off">SSL Override OFF</string>
    <string name="alert_user_loginerror">Could not Log-In</string>
    <string name="alert_user_createerror">Could not Create User</string>
    <string name="alert_user_editerror">Could not Edit User</string>
    <string name="alert_user_createsuccess">User Created Successfully </string>
    <string name="alert_user_notfound">No user found.</string>
    <string name="alert_account_createerror">Could not Create User</string>
    <string name="alert_account_editerror">Could not Edit User</string>
    <string name="alert_account_notfound">No account found</string>
    <string name="user_welcome">Welcome </string>
    <string name="user_account_listempty">No Account</string>
    <string name="user_message_listempty">No Mail</string>
    <string name="user_contact">User Contact</string>
    <string name="user_password">User Password</string>
    <string name="user_username">User Username</string>
    <string name="account_type">Account Type</string>
    <string name="account_alias">Account Alias</string>
    <string name="account_host">Account Host</string>
    <string name="account_port">Account Port</string>
    <string name="account_username">Account Username</string>
    <string name="account_password">Account Password</string>
    <string name="account_usessl">Use SSL</string>
    <string name="account_needstarttls">Needs Start TLS</string>
    <string name="mails_waitopen">Opening Session</string>
    <string name="mails_retrieving_progress_pre">Retrieving mails... </string>
    <string name="mail_waitopen">Opening Session</string>
    <string name="mail_retrieving">Retrieving mail... </string>
    <string name="mail_subject_label">Subject: </string>
    <string name="mail_date_recv_label">Received on: </string>
    <string name="mail_date_sent_label">Sent on: </string>
    <string name="mail_from_label">From: </string>
    <string name="mail_nd">N/D </string>
</resources>
