<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent">
	<LinearLayout
	android:id="@+id/account"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:padding="8sp"
	>
	<TextView
	android:id="@+id/aliaslabel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/account_alias"
	>
	</TextView>
	<EditText
	android:id="@+id/account_alias"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:singleLine="true"
	>
	</EditText>
	<TextView
	android:id="@+id/typelabel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/account_type"
	>
	</TextView>
	<Spinner
	android:id="@+id/account_type"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	>
	</Spinner>
	<TextView
	android:id="@+id/hostlabel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/account_host"
	>
	</TextView>
	<EditText
	android:id="@+id/account_host"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:singleLine="true"
	>
	</EditText>
	<TextView
	android:id="@+id/portlabel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/account_port"
	>
	</TextView>
	<EditText
	android:id="@+id/account_port"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:singleLine="true"
	>
	</EditText>
	<TextView
	android:id="@+id/usernamelabel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/account_username"
	>
	</TextView>
	<EditText
	android:id="@+id/account_username"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:singleLine="true"
	>
	</EditText>
	<TextView
	android:id="@+id/passwordlabel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/account_password"
	>
	</TextView>
	<EditText
	android:id="@+id/account_password"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:password="true"
	android:singleLine="true"
	>
	</EditText>
	<CheckBox
	android:id="@+id/account_usessl"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/account_usessl"
	>
	</CheckBox>
	<CheckBox
	android:id="@+id/account_needstarttls"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/account_needstarttls"
	>
	</CheckBox>
	</LinearLayout>
</ScrollView>