<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent">
	<LinearLayout
	android:id="@+id/user"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:padding="8sp"
	>
	<TextView
	android:id="@+id/contactlabel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/user_contact"
	android:layout_gravity="center_horizontal"
	>
	</TextView>
	<Spinner
	android:id="@+id/user_contact"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal"
	>
	</Spinner>
	<TextView
	android:id="@+id/usernamelabel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/user_username"
	android:layout_gravity="center_horizontal"
	>
	</TextView>
	<EditText
	android:id="@+id/user_username"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal"
	android:singleLine="true"
	>
	</EditText>
	<TextView
	android:id="@+id/passwordlabel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/user_password"
	android:layout_gravity="center_horizontal"
	>
	</TextView>
	<EditText
	android:id="@+id/user_password"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal"
	android:password="true"
	android:singleLine="true"
	>
	</EditText>
	</LinearLayout>
</ScrollView>